rhai/codegen/ui_tests/export_fn_junk_arg.stderr
error: expecting identifier
 --> $DIR/export_fn_junk_arg.rs:9:13
  |
9 | #[export_fn("wheeeee")]
  |             ^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/export_fn_junk_arg.rs:19:8
   |
19 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
